Fixed preview-mode's scrollbar issue (it wasn't showing before).

--- a/app/assets/stylesheets/textdiv.scss
+++ b/app/assets/stylesheets/textdiv.scss
@@ -91,7 +91,11 @@ body {
 
 }
 
-.nice::-webkit-scrollbar-track
+.nice-scroll {
+  overflow-y: auto;
+}
+
+.nice-scroll::-webkit-scrollbar-track
 {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
